--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.IMarketStudentEdition">
         <activity
-            android:name=".MainActivity"
+            android:name=".Activities.UserRegistrationActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Activities.UserAuthenticationActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
