--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,6 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IMarketStudentEdition">
+        <activity
+            android:name=".Activities.AddProductActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Activities.UserActivity"
+            android:exported="true" />
         <activity
             android:name=".Activities.ProductPageActivity"
             android:exported="true" />
